--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <img src="https://acdn.mitiendanube.com/stores/001/245/791/products/7943da7b-7b1c-4279-b225-2a69b12d3ce6-32fe31b3d866225be316846301048164-50-0.webp" alt="Producto 2">
         <h3>Producto 2</h3>
         <p>Descripción del producto 2.</p>
-        <p>Precio: $12.99</p>
+        <p>Precio: $XX.XX</p>
         <div class="quantity">
             <button onclick="decrementQuantity(2)">-</button>
             <input type="number" id="quantity-2" value="0" min="0" readonly>
             <button onclick="incrementQuantity(2)">+</button>
         </div>
-        <button onclick="addToCart('Producto 2', 12.99, 1)">Agregar al carrito</button>
+        <button onclick="addToCart('Producto 2', XX.XX, 1)">Agregar al carrito</button>
         <span id="product-count-2" style="display: none;"></span>
         <button onclick="removeFromCart('Producto 2')">Quitar del carrito</button>
     </div>
@@ -48,30 +48,15 @@
         <img src="https://acdn.mitiendanube.com/stores/001/245/791/products/7943da7b-7b1c-4279-b225-2a69b12d3ce6-32fe31b3d866225be316846301048164-50-0.webp" alt="Producto 3">
         <h3>Producto 3</h3>
         <p>Descripción del producto 3.</p>
-        <p>Precio: $9.99</p>
+        <p>Precio: $XX.XX</p>
         <div class="quantity">
             <button onclick="decrementQuantity(3)">-</button>
             <input type="number" id="quantity-3" value="0" min="0" readonly>
             <button onclick="incrementQuantity(3)">+</button>
         </div>
-        <button onclick="addToCart('Producto 3', 9.99, 1)">Agregar al carrito</button>
+        <button onclick="addToCart('Producto 3', XX.XX, 1)">Agregar al carrito</button>
         <span id="product-count-3" style="display: none;"></span>
         <button onclick="removeFromCart('Producto 3')">Quitar del carrito</button>
-    </div>
-
-    <div class="product">
-        <img src="https://acdn.mitiendanube.com/stores/001/245/791/products/7943da7b-7b1c-4279-b225-2a69b12d3ce6-32fe31b3d866225be316846301048164-50-0.webp" alt="Producto 4">
-        <h3>Producto 4</h3>
-        <p>Descripción del producto 4.</p>
-        <p>Precio: $14.99</p>
-        <div class="quantity">
-            <button onclick="decrementQuantity(4)">-</button>
-            <input type="number" id="quantity-4" value="0" min="0" readonly>
-            <button onclick="incrementQuantity(4)">+</button>
-        </div>
-        <button onclick="addToCart('Producto 4', 14.99, 1)">Agregar al carrito</button>
-        <span id="product-count-4" style="display: none;"></span>
-        <button onclick="removeFromCart('Producto 4')">Quitar del carrito</button>
     </div>
 
     <div id="cart" style="display: none;">
